saves/test/demo_full_20240802_193545/circuit7/debug_2_reboot/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp circuit7_tb.v circuit7.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
circuit7_tb.v:138: $finish called at 350000 (1ps)

iverilog cmd 2 error:

